# WideWorldImporters

./: .gitignore  .sqlfluff  README.md  pyproject.toml  requirements.txt
src/WideWorldImporters/python_scripts/: export_purchase_orders_duplicates.py  export_wide_world_importers.py
src/WideWorldImporters/sql_scripts/: purchase_orders_deduplication.sql  wide_world_importers_report.sql
src/notebooks/: EDA.ipynb
src/python_scripts/: export_purchase_orders_duplicates.py  main.py
src/sql_scripts/: purchase_orders_deduplication.sql  test.sql  wide_world_importers_report.sql  world_wide_importers_report.sql
src/utils/: mssql_connection.py
tests/: test_wide_world_importers.py
tests/fixtures/: invoiceReportNovember2015.xlsx
