[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "WideWorldImporters"
version = "0.0.1"
description = "A Python package for exporting data from the Wide World Importers database."
requires-python = ">= 3.13"
dependencies = [
  "pandas",
  "pyodbc",
  "python-dotenv",
  "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "sqlfluff",
]